# guile-libnotify

./: .gitignore  Makefile.am  README.md  configure.ac  guix.scm  notify.scm  pre-inst-env.in
.github/: FUNDING.yml
doc/: guile-libnotify.texi
notify/: config.scm.in  glib.scm  internal.scm  libnotify.scm
